--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
